8213898: CDS dumping of springboot asserts in G1ArchiveAllocator::alloc_new_region

HeapRegionManager::find_highest_free needs to check if the region obtained from the HeapRegionManager::_regions is available.

Reviewed-by: tschatzl, sjohanss